# mcp-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
docs/superpowers/plans/: 2026-05-26-mcpeval-phase1.md
evals/examples/: code_review.yaml  customer_support.yaml  data_analyst.yaml  incident_response.yaml
mcpeval/: __init__.py  capture.py  cli.py  dataset.py  graph.py  html_reporter.py  mock_server.py  reporter.py  runner.py  store.py
mcpeval/evaluators/: graph_match.py  llm_judge.py  rule.py
tests/: conftest.py  test_capture.py  test_cli.py  test_dataset.py  test_evaluators.py  test_evaluators_llm_judge.py  test_evaluators_rule.py  test_graph.py  test_html_reporter.py  test_mock_server.py  test_regression.py  test_reporter.py  test_runner.py  test_store.py
tests/fixtures/: minimal_suite.yaml
