[project]
name = "mcpeval"
version = "0.1.0"
description = "CI-embeddable MCP tool-call eval harness"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.7",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anyio>=4.0",
    "click>=8.0",
]

[project.scripts]
mcpeval = "mcpeval.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring ANTHROPIC_API_KEY (deselect with '-m not integration')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpeval"]
